--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "7dos.org webpage",
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/marcelotena/template01.git"
   },
   "author": "Marcelo Tena Vicente",
   "devDependencies": {
     "gulp": "^3.8.11",
+    "gulp-coffee": "^2.3.1",
     "gulp-util": "^3.0.3"
   }
 }
